[package]
name = "imanager"
version = "0.1.0"
authors = ["random"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-traits = "0.2.11"
serde = "1.0.118"
rand = "0.8.0"
bincode = "1.3.1"

[dev-dependencies]
criterion = "0.3"
serde = "1.0.118"
rand = "0.8.0"
bincode = "1.3.1"

[[bench]]
name = "vptree"
harness = false