[package]
name = "vptree"
version = "0.1.0"
authors = ["Tomasz Sus"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-traits = "0.2.11"

[dev-dependencies]
criterion = "0.3"
serde = "1.0.118"
bincode = "1.3.1"

[[bench]]
name = "vptree"
harness = false